PIRATE-4588, replacing white icons for instagram and pinterest with grey ones.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1826,6 +1826,17 @@ footer {
     background-image: image('/images/social/socialicons-youtube.svg')
 }
 
+.svg .widget.profile .bk-profile-socialicons span.bk-socialicons-instagram a,
+.svg .widget.socialicons .bk-profile-socialicons span.bk-socialicons-instagram a {
+    background-image: image('/images/social/socialicons-instagram.svg')
+}
+
+.svg .widget.profile .bk-profile-socialicons span.bk-socialicons-pinterest a,
+.svg .widget.socialicons .bk-profile-socialicons span.bk-socialicons-pinterest a {
+    background-image: image('/images/social/socialicons-pinterest.svg')
+}
+
+
 /* PNG ICONS */
 
 .widget.profile .bk-profile-socialicons span.bk-socialicons-twitter a {
@@ -1850,6 +1861,14 @@ footer {
 
 .widget.profile .bk-profile-socialicons span.bk-socialicons-youtube a {
     background-image: image('/images/social/socialicons-youtube.png')
+}
+
+.widget.profile .bk-profile-socialicons span.bk-socialicons-instagram a {
+    background-image: image('/images/social/socialicons-instagram.png')
+}
+
+.widget.profile .bk-profile-socialicons span.bk-socialicons-pinterest a {
+    background-image: image('/images/social/socialicons-pinterest.png')
 }
 
 
